<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Datos APP -->
    <string name="app_name">Trivial La Última y Apago</string>

    <!-- Menu Principal -->
    <string name="titulo">Trivial \nLa Última y Apago</string>
    <string name="jugar">Duelo</string>
    <string name="invitar">Invitar</string>
    <string name="desafio">Desafío</string>
    <string name="logros">Logros</string>
    <string name="podcast">Podcast</string>
    <string name="marcadores">Ranking</string>
    <string name="sal_sesion">Cerrar sesión</string>
    <string name="my_saves">Mi partida guardada</string>

    <!-- Avisos Menu Principal -->
    <string name="identificate">Identifícate</string>
    <string name="idemensaglogro">Identifícate para poder ver los Logros</string>
    <string name="idemensagmarca">Identifícate para poder ver los Marcadores</string>
    <string name="idemensagmulti">Identifícate para poder jugar al Modo Multijugador</string>
    <string name="prox">Próximamente</string>
    <string name="prox_message">En próximas versiones estará disponible</string>
    <string name="ok">OK</string>

    <!-- Modo Desafio -->
    <string name="correcto">¡Correcta!</string>
    <string name="error">¡Error!</string>
    <string name="mode_desafio">MODO\nDESAFÍO</string>
    <string name="mode_duelo">MODO\nDUELO</string>
    <string name="gameover">GAME\nOVER</string>

    <!-- Avisos Modo Desafio -->
    <string name="aviso_salida_modo_desafio">Volveras al menu principal, ¿Estás seguro?</string>
    <string name="atencion">Atención</string>
    <string name="salir">Salir</string>
    <string name="continuar">Continuar Jugando</string>
    <string name="necesita_actualizar">Debes tener una versión superior de la base de datos para puntuar en Google Play</string>
    <string name="titulo_necesita_actualizar">Falta actualizar</string>


    <!-- Generico -->
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cerrar</string>

    <!-- Google Conection -->
    <string name="ini_sesion">iniciar sesión</string>
    <string name="signin_other_error">Error</string>
    <string name="signin_failure">El inicio de sesión ha fallado</string>

    <!-- Enviar Preguntas -->
    <string name="enviar">Enviar</string>
    <string name="enviar_preg">Enviar Preguntas</string>

    <string name="preg">Pregunta:</string>
    <string name="resp1">Respuesta 1:</string>
    <string name="resp2">Respuesta 2:</string>
    <string name="resp3">Respuesta 3:</string>
    <string name="resp4">Respuesta 4:</string>

    <string name="preg_hint">Pregunta</string>
    <string name="resp1_hint">Respuesta 1</string>
    <string name="resp2_hint">Respuesta 2</string>
    <string name="resp3_hint">Respuesta 3</string>
    <string name="resp4_hint">Respuesta 4</string>
    <string name="franquicia_hint">Franquicia</string>
    <string name="respC">Respuesta correcta:</string>
    <string name="categoria">Categoría:</string>
    <string name="juego">Franquicia:</string>
    <string name="dificultad">Dificultad:</string>
    <string name="seleciona">Selecciona la respuesta correcta</string>
    <string name="titulo_enviar">Envianos una pregunta</string>
    <string name="falta">Se debe rellenar todos los campos para poder enviar la pregunta.</string>
    <string name="falta_correcta">Falta introducir la respuesta correcta. Seleccione una respuesta antes de enviar.</string>
    <string name="faltan_resp">Se debe rellenar todos los campos para poder enviar la pregunta</string>
    <string name="envio_correcto">Pregunta enviada correctamente, gracias por tu colaboración</string>
    <string name="envio_fallido">La pregunta no se ha podido enviar :(. Intentalo en otro momente, gracias :).</string>
    <string name="resultado">Resultado</string>
    <string name="fallos">Número de fallos:</string>

    <!-- Puntuaciones -->
    <string name="puntuaciones">¡Puntuaciones!</string>
    <string name="aciertos">Número de aciertos:</string>
    <string name="aciertosseguidos">Aciertos consecutivos:</string>
    <string name="sumados">Puntos sumados:</string>
    <string name="restados">Puntos restados:</string>
    <string name="total">Total</string>

    <!-- Google -->
    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>

    <!-- Estadisticas -->
    <string name="estadisticas">Estadísticas</string>
    <string name="preguntas_respondidas">Preguntas respondidas:</string>
    <string name="preguntas_acertadas">Aciertos:</string>

    <!-- Categorias -->
    <string name="categoria_RPG">RPG y Aventuras Gráficas:</string>
    <string name="categoria_Estrategia">Estrategia y MOBA:</string>
    <string name="categoria_Lucha">Lucha:</string>
    <string name="categoria_Plataformas">Plataformas y Aventuras:</string>
    <string name="categoria_Shooter">Shooter:</string>
    <string name="categoria_Deportes">Deportes:</string>
    <string name="categoria_Otros">Otros:</string>
    <string name="SumaPuntuacion">SumaPuntuación</string>
    <string name="preguntas_nuevas">!Puedes proponer preguntas :)!</string>

    <!-- Actualizacion -->
    <string name="actualizando">Descargando preguntas actualizadas</string>
    <string name="actualizando_preguntas">¡ACTUALIZANDO PREGUNTAS!</string>

    <string name="acercade">Acerca de</string>
    <string name="invitado">Invitado</string>
    <string name="ejemplo_porcentaje">0%</string>
    <string name="siguiente">Siguiente</string>
    <string name="test">Test</string>
    <string name="go">GO!</string>

</resources>
