<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="end"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojogoogleP"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/estadisticas"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blanco"
        android:textSize="28sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TableRow
                android:layout_marginBottom="10dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/preguntas_respondidas" />

                <TextView
                    android:id="@+id/respondidas"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/preguntas_acertadas" />

                <TextView
                    android:id="@+id/acertadas"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/categoria_RPG" />

                <TextView
                    android:id="@+id/rpg_aventras_graficas"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/categoria_Estrategia" />

                <TextView
                    android:id="@+id/estrategia"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/categoria_Lucha" />

                <TextView
                    android:id="@+id/lucha"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/categoria_Plataformas" />

                <TextView
                    android:id="@+id/plataformas_aventuras"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/categoria_Shooter" />

                <TextView
                    android:id="@+id/shooter"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/categoria_Deportes" />

                <TextView
                    android:id="@+id/deportes"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/categoria_Otros" />

                <TextView
                    android:id="@+id/otros"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1" />

            </TableRow>

            <Button
                android:id="@+id/aceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/boton"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/aceptar"
                android:textAllCaps="true"
                android:textColor="@color/blanco"
                android:textSize="20sp" />

        </TableLayout>

    </ScrollView>

</LinearLayout>