<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="60dp"
    android:background="@drawable/border"
    android:gravity="end"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojogoogleP"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/puntuaciones"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blanco"
        android:textSize="28sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TableRow
                android:layout_marginBottom="5dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/fallos" />

                <TextView
                    android:id="@+id/txtnumfallos"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1"
                    android:textColor="@color/firebrick" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/aciertos" />

                <TextView
                    android:id="@+id/txtnumaciertos"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1"
                    android:textColor="@color/verde" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/aciertosseguidos" />

                <TextView
                    android:id="@+id/txtnumconsecutivos"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1"
                    android:textColor="@color/negro" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/sumados" />

                <TextView
                    android:id="@+id/txtsuma"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1"
                    android:textColor="@color/verde" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp"
                android:minHeight="40dp">

                <TextView
                    style="@style/TextoEstadisticas"
                    android:text="@string/restados" />

                <TextView
                    android:id="@+id/txtrestados"
                    style="@style/DatosEstadisticas"
                    android:text="Resultado 1"
                    android:textColor="@color/firebrick" />

            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txttotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textColor="@color/negro"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:id="@+id/aceptar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/aceptar"
                    android:textAllCaps="true"
                    android:textColor="@color/blanco"
                    android:textSize="20sp" />

            </LinearLayout>


        </TableLayout>
    </ScrollView>

</LinearLayout>