<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rojogoogleP"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="231dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imagen_usuario"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:src="@color/negro"
            app:civ_border_color="@color/blanco"
            app:civ_border_width="2dp"
            app:civ_fill_color="@color/negro" />

        <TextView
            android:id="@+id/nombre_usuario"
            style="@style/SombreadoTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/invitado"
            android:textColor="@color/blanco"
            android:textSize="22sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blanco" />

    <RelativeLayout
        android:id="@+id/boton_estadisticas"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/boton"
        android:paddingLeft="20dp">

        <ImageView
            android:id="@+id/img_estadisticas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_estadisticas" />

        <TextView
            style="@style/SombreadoTexto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/img_estadisticas"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:text="@string/estadisticas"
            android:textColor="@color/blanco"
            android:textSize="30sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blanco" />

    <RelativeLayout
        android:id="@+id/boton_enviar_preg"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/boton"
        android:paddingLeft="20dp">

        <ImageView
            android:id="@+id/img_enviar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_menu_enviarpreg" />

        <TextView
            style="@style/SombreadoTexto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/img_enviar"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:text="@string/enviar_preg"
            android:textColor="@color/blanco"
            android:textSize="30sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blanco" />

    <RelativeLayout
        android:id="@+id/boton_about"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:background="@drawable/boton"
        android:paddingLeft="20dp">

        <ImageView
            android:id="@+id/img_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_acercade" />

        <TextView
            style="@style/SombreadoTexto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/img_info"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:text="@string/acercade"
            android:textColor="@color/blanco"
            android:textSize="30sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blanco" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/boton"
        android:paddingLeft="20dp">


    </RelativeLayout>


</LinearLayout>